--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>WDI32 Project 4</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script type="text/javascript" src="https://static.filestackapi.com/v3/filestack.js"></script>
+
+  <title>Unstagram</title>
 </head>
 <body>
 
